Ajustes nas marcações

--- a/contato.html
+++ b/contato.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esquadrimel</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="empresa.html">Empresa</a></li>
-                <li><a href="servico.html">Serviços</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Solicite seu orçamento</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="image/favicon_io/android-chrome-512x512.png" type="image/x-icon">
+        <title>Esquadrimel</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="empresa.html">Empresa</a></li>
+                    <li><a href="servico.html">Serviços</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>Solicite seu orçamento</h1>
 
-        <p>
-            Entre em contato com a Esquadrimel e fale com um especialista. Estamos prontos para entender seu projeto e oferecer a melhor solução em serralheria de alumínio.
-        </p>
+            <p>
+                Entre em contato com a Esquadrimel e fale com um especialista. Estamos prontos para entender seu projeto e oferecer a melhor solução em serralheria de alumínio.
+            </p>
 
-        <h2>Atendimento profissional e personalizado</h2>
+            <h2>Atendimento profissional e personalizado</h2>
 
-        <p>
-            Nossa equipe está à disposição para esclarecer dúvidas, apresentar soluções e desenvolver projetos sob medida.
-        </p>
+            <p>
+                Nossa equipe está à disposição para esclarecer dúvidas, apresentar soluções e desenvolver projetos sob medida.
+            </p>
 
-        <span>Fale Conosco pelo WhatsApp</span>
+            <button>Fale Conosco pelo WhatsApp</button>       
 
-        <span>Solicitar Orçamento</span>
+            <h2>Esquadrimel</h2>
 
-        <h2>Esquadrimel</h2>
-
-        <p>
-            Mais de 20 anos transformando alumínio em soluções de alto padrão
-        </p>
-    </main>
-</body>
+            <p>
+                Mais de 20 anos transformando alumínio em soluções de alto padrão
+            </p>
+        </main>
+    </body>
 </html>
