--- a/empresa.html
+++ b/empresa.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esquadrimel</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Início</a></li>
-                <li><a href="empresa.html">Empresa</a></li>
-                <li><a href="servico.html">Serviços</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Tradição, confiança e excelência em serralheria de alumínio</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="image/favicon_io/android-chrome-512x512.png" type="image/x-icon">
+        <title>Esquadrimel</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Início</a></li>
+                    <li><a href="empresa.html">Empresa</a></li>
+                    <li><a href="servico.html">Serviços</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <h1>Tradição, confiança e excelência em serralheria de alumínio</h1>
 
-        <p>
-            Fundada com o propósito de entregar soluções duráveis e esteticamente superiores, a Esquadrimel atua há mais de 20 anos no mercado de serralheria de alumínio, atendendo projetos residenciais e comerciais com seriedade e profissionalismo.
-        </p>
+            <p>
+                Fundada com o propósito de entregar soluções duráveis e esteticamente superiores, a Esquadrimel atua há mais de 20 anos no mercado de serralheria de alumínio, atendendo projetos residenciais e comerciais com seriedade e profissionalismo.
+            </p>
 
-        <p>
-            Nossa trajetória é marcada pela evolução constante, investimento em materiais de qualidade e aprimoramento técnico. Cada projeto é tratado de forma exclusiva, desde o planejamento até a instalação final, garantindo precisão, segurança e acabamento impecável.
-        </p>
+            <p>
+                Nossa trajetória é marcada pela evolução constante, investimento em materiais de qualidade e aprimoramento técnico. Cada projeto é tratado de forma exclusiva, desde o planejamento até a instalação final, garantindo precisão, segurança e acabamento impecável.
+            </p>
 
-        <p>
-            Mais do que fabricar estruturas em alumínio, construímos r<strong>elações de confiança</strong> e entregamos soluções que agregam valor ao imóvel e tranquilidade ao cliente.
-        </p>
+            <p>
+                Mais do que fabricar estruturas em alumínio, construímos r<strong>elações de confiança</strong> e entregamos soluções que agregam valor ao imóvel e tranquilidade ao cliente.
+            </p>
 
-        <h2>Missão</h2>
+            <h2>Missão</h2>
 
-        <p>
-            Oferecer soluções em alumínio com alto padrão de qualidade, unindo técnica, design e durabilidade, superando as expectativas de cada cliente.
-        </p>
+            <p>
+                Oferecer soluções em alumínio com alto padrão de qualidade, unindo técnica, design e durabilidade, superando as expectativas de cada cliente.
+            </p>
 
-        <h2>Visão</h2>
+            <h2>Visão</h2>
 
-        <p>
-            Ser referência regional em serralheria de alumínio, reconhecida pela excelência, confiança e acabamento superior.
-        </p>
+            <p>
+                Ser referência regional em serralheria de alumínio, reconhecida pela excelência, confiança e acabamento superior.
+            </p>
 
-        <ul>
             <h2>Valores</h2>
+            
+            <ul>
                 <li>Qualidade</li>
                 <li>Compromisso</li>
                 <li>Ética</li>
                 <li>Transparência</li>
                 <li>Profissionalismo</li>
-        </ul>
+            </ul>
 
-    </main>
-</body>
+        </main>
+    </body>
 </html>
