--- a/servico.html
+++ b/servico.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="image/favicon_io/android-chrome-512x512.png" type="image/x-icon">
         <title>Esquadrimel</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -47,7 +49,7 @@
                 Cada projeto é analisado de forma individual, garantindo soluções adequadas às necessidades do cliente e ao estilo do ambiente.
             </p>
 
-            <span>Solicite um Orçamento</span>
+            <a href="contato.html">Solicite um Orçamento</a>
 
         </main>
     </body>
