--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="image/favicon_io/android-chrome-512x512.png" type="image/x-icon">
         <title>Esquadrimel</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -25,9 +27,7 @@
                 Há mais de duas décadas, a Esquadrimel desenvolve soluções em serralheria de alumínio que unem <strong>design</strong>, <strong>resistência</strong> e <strong>acabamento impecável</strong>. Atuamos com projetos personalizados para residências e comércios, sempre respeitando as necessidades de cada cliente e os mais altos padrões de qualidade.
             </p>
 
-            <span>Solicite um Orçamento</span>
-
-            <span>Fale com um Especialista</span>
+            <a href="contato.html">Fale com um Especialista</a>
 
             <h2>Excelência em serralheria de alumínio</h2>
 
@@ -56,23 +56,24 @@
                 Box com <strong>estrutura robusta</strong>, <strong>visual elegante</strong> e i<strong>nstalação segura</strong>, desenvolvidos para unir praticidade e sofisticação ao ambiente.
             </p>
 
-            <span>Conheça Todos os Serviços</span>
+            <a href="servico.html">Conheça Todos os Serviços</a>
+
+            <h2>Por que escolher a Esquadrimel</h2>
 
             <ul>
-                <h2>Por que escolher a Esquadrimel</h2>
-                    <li>Mais de 20 anos de experiência no mercado</li>
-                    <li>Projetos personalizados</li>
-                    <li>Materiais de alta qualidade</li>
-                    <li>Acabamento profissional</li>
-                    <li>Atendimento especializado</li>
-                    <li>Compromisso com prazos</li>
+                <li>Mais de 20 anos de experiência no mercado</li>
+                <li>Projetos personalizados</li>
+                <li>Materiais de alta qualidade</li>
+                <li>Acabamento profissional</li>
+                <li>Atendimento especializado</li>
+                <li>Compromisso com prazos</li>
             </ul>
 
             <h2>Transforme seu projeto em realidade</h2>
 
             <p>Conte com uma empresa que entende de alumínio e valoriza cada detalhe do seu espaço.</p>
          
-            <span>Solicite seu Orçamento Agora</span>
+            <a href="contato.html">Solicite seu Orçamento Agora</a>
 
        </main>
        <footer>
