Confeccionando a estrutura empresa.html

--- a/empresa.html
+++ b/empresa.html
@@ -3,58 +3,147 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Conheça a Esquadrimel - Tradição, confiança e excelência em serralheria de aluminío há mais de 20 anos.">
+        <meta name="keywords" content="esquadrimel, empresa, história, missão, visão, valores, serralheria aluminío">
         <link rel="shortcut icon" href="image/favicon_io/android-chrome-512x512.png" type="image/x-icon">
-        <title>Esquadrimel</title>
+        <title>Esquadrimel | Nossa História e Valores</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="empresa.html">Empresa</a></li>
-                    <li><a href="servico.html">Serviços</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </nav>
+
+        <!--Cabeçalho do Site-->
+        <header class="header">
+            <div class="container">
+                <div class="header-logo">
+                    <img src="image/logo_Esquadrimel_00.jpg" alt="Logotipo da Esquadrimel">
+                </div>
+                <nav class="nav" aria-label="Navegação Principal">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="empresa.html" class="nav-link nav-link--active" aria-current="page">Empresa</a></li>
+                        <li class="nav-item"><a href="servico.html" class="nav-link">Serviços</a></li>
+                        <li class="nav-item"><a href="contato.html" class="nav-link">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
-        <main>
-            <h1>Tradição, confiança e excelência em serralheria de alumínio</h1>
 
-            <p>
-                Fundada com o propósito de entregar soluções duráveis e esteticamente superiores, a Esquadrimel atua há mais de 20 anos no mercado de serralheria de alumínio, atendendo projetos residenciais e comerciais com seriedade e profissionalismo.
-            </p>
+        <!--Conteúdo Principal-->
+        <main class="main">
+            <!--Seção Hero-->
+            <section class="hero">
+                <div class="container">
+                    <h1 class="hero-title">Tradição, confiança e excelência em serralheria de alumínio</h1>
+                </div>
+            </section>
 
-            <p>
-                Nossa trajetória é marcada pela evolução constante, investimento em materiais de qualidade e aprimoramento técnico. Cada projeto é tratado de forma exclusiva, desde o planejamento até a instalação final, garantindo precisão, segurança e acabamento impecável.
-            </p>
+            <!--Seção Nossa História-->
+            <section class="company-history">
+                <div class="container">
+                    <h2 class="company-history-title">Nossa História</h2>
+                    <p class="company-history-text">
+                    Fundada com o propósito de entregar soluções duráveis e esteticamente superiores, a Esquadrimel atua há mais de 20 anos no mercado de serralheria de alumínio, atendendo projetos residenciais e comerciais com seriedade e profissionalismo.
+                    </p>
+                    <p class="company-history-text">
+                    Nossa trajetória é marcada pela evolução constante, investimento em materiais de qualidade e aprimoramento técnico. Cada projeto é tratado de forma exclusiva, desde o planejamento até a instalação final, garantindo precisão, segurança e acabamento impecável.
+                    </p>
+                    <p class="company-history-text">
+                    Mais do que fabricar estruturas em alumínio, construímos <strong>relações de confiança</strong> e entregamos soluções que agregam valor ao imóvel e tranquilidade ao cliente.
+                    </p>
+                </div>
+            </section>
 
-            <p>
-                Mais do que fabricar estruturas em alumínio, construímos r<strong>elações de confiança</strong> e entregamos soluções que agregam valor ao imóvel e tranquilidade ao cliente.
-            </p>
+            <!--Seção MIssão, Visão e Valores-->
+            <section class="mission">
+                <div class="container">
+                    
+                    <!--Missão-->
+                    <article class="mission-card">
+                        <div class="mission-card-icon">
+                            <!--Ícone pode ser adicionado aqui-->
+                        </div>
+                        <h2 class="mission-card-title">Missão</h2>
+                        <p class="mission-card-text">
+                          Oferecer soluções em alumínio com alto padrão de qualidade, unindo técnica, design e durabilidade, superando as expectativas de cada cliente.
+                        </p>
+                    </article>
 
-            <h2>Missão</h2>
+                    <!--Visão-->
+                    <article class="mission-card">
+                        <div class="mission-card-icon">
+                            <!--Ícone pode ser adicionado aqui-->
+                        </div>
+                        <h2 class="mission-card-title">Visão</h2>
+                        <p class="mission-card-text">
+                            Ser referência regional em serralheria de alumínio, reconhecida pela excelência, confiança e acabamento superior.
+                        </p>
+                    </article>
 
-            <p>
-                Oferecer soluções em alumínio com alto padrão de qualidade, unindo técnica, design e durabilidade, superando as expectativas de cada cliente.
-            </p>
+                    <!--Valores-->
+                    <article class="mission-card mission-card--full">
+                        <div class="mission-card-icon">
+                           <!--Ícone pode ser adicionado aqui-->
+                        </div>
+                        <h2 class="mission-card-title">Valores</h2>
+                        <ul class="mission-values-list">
+                            <li class="mission-values-item">Qualidade</li>
+                            <li class="mission-values-item">Compromisso</li>
+                            <li class="mission-values-item">Ética</li>
+                            <li class="mission-values-item">Transparência</li>
+                            <li class="mission-values-item">Profissionalismo</li>
+                        </ul>
+                    </article>
+                </div>
+            </section>
 
-            <h2>Visão</h2>
-
-            <p>
-                Ser referência regional em serralheria de alumínio, reconhecida pela excelência, confiança e acabamento superior.
-            </p>
-
-            <h2>Valores</h2>
-            
-            <ul>
-                <li>Qualidade</li>
-                <li>Compromisso</li>
-                <li>Ética</li>
-                <li>Transparência</li>
-                <li>Profissionalismo</li>
-            </ul>
-
+             <!-- Seção CTA -->
+            <section class="cta">
+                <div class="container">
+                    <article class="cta-content">
+                        <h2 class="cta-title">Pronto para conhecer nossos serviços?</h2>
+                        <p class="cta-text">
+                            Entre em contato e descubra como podemos transformar seu projeto em realidade.
+                        </p>
+                        <div class="cta-button">
+                            <a href="contato.html" class="btn btn--primary">Fale Conosco</a>
+                        </div>
+                    </article>
+                </div>
+            </section>
         </main>
+
+        <!-- Rodapé -->
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content">          
+                    <div class="footer-info">
+                        <h3 class="footer-title">Esquadrimel</h3>
+                        <p class="footer-text">
+                            Soluções em alumínio com excelência e qualidade desde 2004.
+                        </p>
+                    </div>
+                    <nav class="footer-nav" aria-label="Navegação do rodapé">
+                        <h4 class="footer-nav-title">Links Rápidos</h4>
+                        <ul class="footer-nav-list">
+                            <li><a href="index.html" class="footer-link">Início</a></li>
+                            <li><a href="empresa.html" class="footer-link">Empresa</a></li>
+                            <li><a href="servico.html" class="footer-link">Serviços</a></li>
+                            <li><a href="contato.html" class="footer-link">Contato</a></li>
+                        </ul>
+                    </nav>
+                    <div class="footer-contact">
+                        <h4 class="footer-contact-title">Contato</h4>
+                        <address class="footer-address">
+                            <p>Entre em contato para mais informações</p>
+                        </address>
+                    </div>
+                </div>
+                <div class="footer-bottom">
+                    <p class="footer-copyright">
+                        &copy; 2025 Esquadrimel. Todos os direitos reservados.
+                    </p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
