Confeccionando estrutura servico.html

--- a/servico.html
+++ b/servico.html
@@ -3,54 +3,152 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Serviços Esquadrimel - Portões, grades, janelas, esquadrias e box em alumínio. Soluções completas de alto padrão.">
+        <meta name="keywords" content="portões alumínio, grades, janelas, esquadrias, box banheiro, serralheria">
         <link rel="shortcut icon" href="image/favicon_io/android-chrome-512x512.png" type="image/x-icon">
-        <title>Esquadrimel</title>
+        <title>Esquadrimel | Serviços em Alumínio</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="empresa.html">Empresa</a></li>
-                    <li><a href="servico.html">Serviços</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </nav>
+
+        <!--Cabeçalho do Site-->
+        <header class="header">
+            <div class="container">
+                <div class="header-logo">
+                    <img src="image/logo_Esquadrimel_00.jpg" alt="Logotipo da Esquadrimel">
+                </div>
+                <nav class="nav" aria-label="Navegação Principal">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="empresa.html" class="nav-link">Empresa</a></li>
+                        <li class="nav-item"><a href="servico.html" class="nav-link nav-link--active" aria-current="page">Serviços</a></li>
+                        <li class="nav-item"><a href="contato.html" class="nav-link">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
-        <main>
-            <h1>Soluções completas em alumínio de alto padrão</h1>
 
-            <p>
-                A Esquadrimel oferece serviços personalizados em serralheria de alumínio, desenvolvidos para atender diferentes necessidades com <strong>qualidade</strong>, <strong>segurança</strong> e <strong>sofisticação</strong>.
-            </p>
+        <!--Conteúdo Principal-->
+        <main class="main">
 
-            <h2>Portões e Grades em Alumínio</h2>
+            <!--Seção Hero-->
+            <section class="hero">
+                <div class="container">
+                    <h1 class="hero-title">Soluções completas em alumínio de alto padrão</h1>
+                </div>
+            </section>
 
-            <p>
-                Projetados para oferecer máxima segurança sem abrir mão do design. Fabricamos portões e grades sob medida, com acabamento preciso e excelente durabilidade.
-            </p>
+            <!--Seção Introdução-->
+            <section class="services-intro">
+                <div class="container">
+                    <p class="services-intro-text">
+                        A Esquadrimel oferece serviços personalizados em serralheria de alumínio, desenvolvidos para atender diferentes necessidades com <strong>qualidade</strong>, <strong>segurança</strong> e <strong>sofisticação</strong>.
+                    </p>
+                </div>
+            </section>
 
-            <h2>Janelas e Esquadrias em Alumínio</h2>
+            <!--Seção Serviços Detalhados-->
+            <section class="services-details">
+                <div class="container">
 
-            <p>
-                Soluções que proporcionam conforto térmico, boa vedação e estética refinada. Ideal para projetos que exigem funcionalidade e valorização arquitetônica.
-            </p>
+                    <!--Portões e Grades-->
+                    <article class="service-detail">
+                        <div class="service-detail-icon">
+                        <!--Ícone pode ser adicionado aqui-->
+                        </div>
+                        <h2 class="service-detail-title">Portões e Grades em Alumínio</h2>
+                        <p class="service-detail-text">
+                            Projetados para oferecer máxima segurança sem abrir mão do design. Fabricamos portões e grades sob medida, com acabamento preciso e excelente durabilidade.
+                        </p>
+                    </article>
 
-            <h2>Box para Banheiro em Alumínio</h2>
+                    <!--Janelas e Esquadrias-->
+                    <article class="service-detail">
+                        <div class="service-detail-icon">
+                        <!--Ícone pode ser adicionado aqui-->
+                        </div>
+                        <h2 class="service-detail-title">Janelas e Esquadrias em Alumínio</h2>
+                        <p class="service-detail-text">
+                            Soluções que proporcionam conforto térmico, boa vedação e estética refinada. Ideal para projetos que exigem funcionalidade e valorização arquitetônica.
+                        </p>
+                    </article>
 
-            <p>
-                Box modernos, resistentes e de fácil manutenção, desenvolvidos com foco em segurança, praticidade e elegância.
-            </p>
+                    <!--Box para Banheiro-->
+                    <article class="service-detail">
+                        <div class="service-detail-icon">
+                        <!--Ícone pode ser adicionado aqui-->
+                        </div>
+                        <h2 class="service-detail-title">Box para Banheiro em Alumínio</h2>
+                        <p class="service-detail-text">
+                            Box modernos, resistentes e de fácil manutenção, desenvolvidos com foco em segurança, praticidade e elegância.
+                        </p>
+                    </article>
 
-            <h2>Atendimento personalizado</h2>
+                    <!--Atendimento Personalizado-->
+                    <article class="service-detail service-detail--highlight">
+                        <div class="service-detail-icon">
+                        <!--Ícone pode ser adicionado aqui-->
+                        </div>
+                        <h2 class="service-detail-title">Atendimento personalizado</h2>
+                        <p class="service-detail-text">
+                            Cada projeto é analisado de forma individual, garantindo soluções adequadas às necessidades do cliente e ao estilo do ambiente.
+                        </p>
+                    </article>
 
-            <p>
-                Cada projeto é analisado de forma individual, garantindo soluções adequadas às necessidades do cliente e ao estilo do ambiente.
-            </p>
+                </div>
+            </section>
 
-            <a href="contato.html">Solicite um Orçamento</a>
+            <!--Seção CTA-->
+            <section class="cta">
+                <div class="container">
+                    <article class="cta-content">
+                        <h2 class="cta-title">Pronto para iniciar seu projeto?</h2>
+                        <p class="cta-text">
+                            Entre em contato e solicite um orçamento sem compromisso.
+                        </p>
+                        <div class="cta-button">
+                            <a href="contato.html" class="btn btn--primary">Solicite um Orçamento</a>
+                        </div>
+                    </article>
+                </div>
+            </section>
 
         </main>
+
+        <!--Rodapé-->
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-info">
+                        <h3 class="footer-title">Esquadrimel</h3>
+                        <p class="footer-text">
+                            Soluções em alumínio com excelência e qualidade desde 2004.
+                        </p>
+                    </div>
+                    <nav class="footer-nav" aria-label="Navegação do rodapé">
+                        <h4 class="footer-nav-title">Links Rápidos</h4>
+                        <ul class="footer-nav-list">
+                            <li><a href="index.html" class="footer-link">Início</a></li>
+                            <li><a href="empresa.html" class="footer-link">Empresa</a></li>
+                            <li><a href="servico.html" class="footer-link">Serviços</a></li>
+                            <li><a href="contato.html" class="footer-link">Contato</a></li>
+                        </ul>
+                    </nav>
+                    <div class="footer-contact">
+                        <h4 class="footer-contact-title">Contato</h4>
+                        <address class="footer-address">
+                            <p>
+                                Entre em contato para mais informações
+                            </p>
+                        </address>
+                    </div>
+                    <div class="footer-bottom">
+                        <p class="footer-copyright">
+                            &copy; 2025 Esquadrimel. Todos os direitos reservados.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
