Confeccionando estrutura contato.html

--- a/contato.html
+++ b/contato.html
@@ -3,41 +3,118 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Entre em contato com a Esquadrimel. Solicite seu orçamento em serralheria de alumínio. Atendimento profissional e personalizado.">
+        <meta name="keywords" content="contato esquadrimel, orçamento, whatsapp, serralheria alumínio">
         <link rel="shortcut icon" href="image/favicon_io/android-chrome-512x512.png" type="image/x-icon">
-        <title>Esquadrimel</title>
+        <title>Esquadrimel | Contato e Orçamento</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="empresa.html">Empresa</a></li>
-                    <li><a href="servico.html">Serviços</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-            </nav>
+
+        <!--Cabeçalho do Site-->
+        <header class="header">
+            <div class="container">
+                <div class="header-logo">
+                    <img src="image/logo_Esquadrimel_00.jpg" alt="Logotipo da Esquadrimel">
+                </div>
+                <nav class="nav" aria-label="Navegação Principal">
+                    <ul class="nav-list">
+                        <li class="nav-item"><a href="index.html" class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="empresa.html" class="nav-link">Empresa</a></li>
+                        <li class="nav-item"><a href="servico.html" class="nav-link">Serviços</a></li>
+                        <li class="nav-item"><a href="contato.html" class="nav-link nav-link--active" aria-current="page">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
-        <main>
-            <h1>Solicite seu orçamento</h1>
 
-            <p>
-                Entre em contato com a Esquadrimel e fale com um especialista. Estamos prontos para entender seu projeto e oferecer a melhor solução em serralheria de alumínio.
-            </p>
+        <!--Conteúdo Principal-->
+        <main class="main">
 
-            <h2>Atendimento profissional e personalizado</h2>
+            <!--Seção Hero-->
+            <section class="hero">
+                <div class="container">
+                    <h1 class="hero-title">Solicite seu orçamento</h1>
+                </div>
+            </section>
 
-            <p>
-                Nossa equipe está à disposição para esclarecer dúvidas, apresentar soluções e desenvolver projetos sob medida.
-            </p>
+            <!--Seção Introdução do Contato-->
+            <section class="contact-intro">
+                <div class="container">
+                    <p class="contact-intro-text">
+                        Entre em contato com a Esquadrimel e fale com um especialista. Estamos prontos para entender seu projeto e oferecer a melhor solução em serralheria de alumínio.
+                    </p>
+                </div>
+            </section>
 
-            <button>Fale Conosco pelo WhatsApp</button>       
+            <!--Seção Atendimento-->
+            <section class="contact-service">
+                <div class="container">
+                    <h2 class="contact-service-title">Atendimento profissional e personalizado</h2>
+                    <p class="contact-service-text">
+                        Nossa equipe está à disposição para esclarecer dúvidas, apresentar soluções e desenvolver projetos sob medida.
+                    </p>
+                </div>
+            </section>
 
-            <h2>Esquadrimel</h2>
+            <!--Seção Botão WhatsApp-->
+            <section class="contact-whatsapp">
+                <div class="container">
+                    <div class="contact-whatsapp-content">
+                        <button class="btn btn--whatsapp">
+                            Fale Conosco pelo WhatsApp
+                        </button>
+                    </div>
+                </div>
+            </section>
 
-            <p>
-                Mais de 20 anos transformando alumínio em soluções de alto padrão
-            </p>
+            <!--Seção Informações da Empresa-->
+            <section class="contact-info">
+                <div class="container">
+                    <article class="contact-info-card">
+                        <h2 class="contact-info-title">Esquadrimel</h2>
+                        <p class="contact-info-text">
+                            Mais de 20 anos transformando alumínio em soluções de alto padrão
+                        </p>
+                    </article>
+                </div>
+            </section>
         </main>
+
+        <!--Rodapé-->
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-info">
+                        <h3 class="footer-title">Esquadrimel</h3>
+                        <p class="footer-text">
+                            Soluções em alumínio com excelência e qualidade desde 2004.
+                        </p>
+                    </div>
+                    <nav class="footer-nav" aria-label="Navegação do rodapé">
+                        <h4 class="footer-nav-title">Links Rápidos</h4>
+                        <ul class="footer-nav-list">
+                            <li><a href="index.html" class="footer-link">Início</a></li>
+                            <li><a href="empresa.html" class="footer-link">Empresa</a></li>
+                            <li><a href="servico.html" class="footer-link">Serviços</a></li>
+                            <li><a href="contato.html" class="footer-link">Contato</a></li>
+                        </ul>
+                    </nav>
+                    <div class="footer-contact">
+                        <h4 class="footer-contact-title">Contato</h4>
+                        <address class="footer-address">
+                            <p>
+                                Entre em contato para mais informações
+                            </p>
+                        </address>
+                    </div>
+                    <div class="footer-bottom">
+                        <p class="footer-copyright">
+                            &copy; 2025 Esquadrimel. Todos os direitos reservados.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
