--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        <main class="main">
             <section class="hero">
                 <div class="container">
-                    <h2>Precisão em alumínio. Elegância construída ao longo do tempo.</h2>
+                    <h2 class="hero-title">Precisão em alumínio. Elegância construída ao longo do tempo.</h2>
                 </div>
             </section>
 
@@ -83,7 +83,7 @@
                     <article class="service-card">
                         <h3 class="service-card-title">Box para Banheiro em Alumínio</h3>
                         <p class="service-card-description">
-                            Box com <strong>estrutura robusta</strong>, <strong>visual elegante</strong> e i<strong>nstalação segura</strong>, desenvolvidos para unir praticidade e sofisticação ao ambiente.
+                            Box com <strong>estrutura robusta</strong>, <strong>visual elegante</strong> e <strong>instalação segura</strong>, desenvolvidos para unir praticidade e sofisticação ao ambiente.
                         </p>
                     </article>
                     <div class="services-cta">
