--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     </head>
     <body>
 
-        <!--Cabeçalho do Site-->>
+        <!--Cabeçalho do Site-->
         <header class="header">
             <div class="container">
                 <div class="header-logo">
-                    <img src="image/logo_Esquadrimel_00.jpg" alt="Logotipo da Esquadrimel">
+                    <img src="image/Logo_Esquadrimel_00.png" alt="Logotipo da Esquadrimel">
                 </div>
                 <nav class="nav" aria-label="Navegação principal">
                     <ul class="nav-list">
@@ -31,8 +31,8 @@
         <!--Conteúdo Principal-->
        <main class="main">
             <section class="hero">
-                <div class="container">
-                    <h2 class="hero-title">Precisão em alumínio. Elegância construída ao longo do tempo.</h2>
+                <div class="container">              
+                    <h2 class="hero-title"> Elegância construída ao longo do tempo.</h2>
                 </div>
             </section>
 
@@ -59,35 +59,32 @@
             </section>
 
             <!--Seção Serviços-->
-            <section class="services">
+           <section class="services">
+                <h2 class="services-title">Nossos Serviços</h2>
                 <div class="container">
-                    <h2 class="services-title">Nossos Serviços</h2>
-                   
-                    <!--Card Serviço 1-->
                     <article class="service-card">
                         <h3 class="service-card-title">Portões e Grades em Alumínio</h3>
                         <p class="service-card-description">
-                            Soluções que aliam <strong>segurança</strong>, <strong>resistência</strong> e <strong>design moderno</strong>, fabricadas sob medida para valorizar fachadas residenciais e comerciais.
+                            Segurança e design moderno, fabricados sob medida para valorizar fachadas residenciais e comerciais.
                         </p>
                     </article>
 
-                    <!--Card Serviço 2-->
                     <article class="service-card">
                         <h3 class="service-card-title">Janelas e Esquadrias Sob Medida</h3>
                         <p class="service-card-description">
-                            Esquadrias em alumínio com <strong>excelente vedação</strong>, <strong>acabamento preciso</strong> e <strong>alto desempenho</strong>, proporcionando conforto, funcionalidade e valorização do imóvel.
+                            Excelente vedação, acabamento preciso e alto desempenho para conforto e funcionalidade.
                         </p>
                     </article>
 
-                    <!--Card Serviço 3-->
                     <article class="service-card">
                         <h3 class="service-card-title">Box para Banheiro em Alumínio</h3>
                         <p class="service-card-description">
-                            Box com <strong>estrutura robusta</strong>, <strong>visual elegante</strong> e <strong>instalação segura</strong>, desenvolvidos para unir praticidade e sofisticação ao ambiente.
+                            Estrutura robusta e visual elegante, desenvolvidos para unir praticidade e sofisticação.
                         </p>
                     </article>
+
                     <div class="services-cta">
-                        <a href="servico.html" class="btn btn--secondary">Conheça Todos os Serviços</a>
+                        <a href="servico.html">Conheça Todos os Serviços</a>
                     </div>
                 </div>
             </section>
